@@ -50,9 +50,9 @@ aide_SOURCES =	\
 
 INCLUDES = -I$(top_srcdir)/include
 
-LDADD = @CRYPTLIB@ @ACLLIB@ @SELINUXLIB@
+LDADD = -lm @CRYPTLIB@ @ACLLIB@ @SELINUXLIB@ @AUDITLIB@
 
-AM_LDFLAGS = @LDFLAGS@ @LD_STATIC_FLAG@ -lm
+AM_LDFLAGS = @LDFLAGS@ @LD_STATIC_FLAG@
 
 AM_CFLAGS = @CFLAGS@ @MAINTAINER_MODE_TRUE@ -Wall -g
 
